# invoice-app

./: .gitignore  CLAUDE.md  CONTINUATION_PROMPT.md  HANDOFF.md  auth.js  bedate.js  cap-stock.html  collection-sync.js  connection-status.js  customer-import.html  customer-sync.js  customers.html  dashboard.html  db.js  drive-config.example.js  drive-config.js  drive-db-sync.js  drive-store.js  excel-import.html  firebase-config.example.js  firebase-config.js  firestore.rules  gitresult2.txt  help.html  history.html  idb.js  image-store.js  index.html  invoice-create.html  invoices.html  local-folder-sync.js  manifest.json  mockup-restore-point.html  mockup-sync-progress.html  mockup-viewer-role.html  nav.js  netlify-build.sh  netlify.toml  package.json  payments.html  (+23 more)
.claude/: settings.local.json
.github/workflows/: pages.yml  release-desktop.yml
icons/: generate-icons.html
scripts/: bump-version.js  tauri-copy-dist.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
